--- a/src/components/WindowDisplay/index.css
+++ b/src/components/WindowDisplay/index.css
@@ -1,8 +1,5 @@
 .paper{
-    box-sizing: border-box;
-    border-radius: 5px;
-    box-shadow: 5px 5px 5px rgba(0,0,0,0.5),0px 0px 3px rgba(0,0,0,0.5);
-    padding: 20px;
+    overflow-y: scroll;
     display: flex;
     flex-wrap: wrap;
 }
