--- a/src/components/Item/index.css
+++ b/src/components/Item/index.css
@@ -1,15 +1,34 @@
-.item{
+.item {
   padding: 10px;
+  height: 120px;
 }
-.item::after{
+
+.item::after {
   content: '';
   display: block;
   clear: both;
 }
 
-.item>.title {
+.item-title-wrap {
+  width: calc(90% - 100px);
+  margin-right: 0;
+  float: left;
+}
+
+.item-title {
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   overflow: hidden;
+}
+
+.amount {
+  float: right;
+  height: 100%;
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bolder;
 }
