--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -41,7 +41,11 @@
   font-size: 30px;
   height: 60px;
   padding: 10px 30px;
-  float: left;
+  transition: 0.5s;
+}
+
+.cancel-btn:hover{
+  background-color: rgba(255, 0, 0, 0.1);
 }
 
 .cancel-btn>svg {
@@ -58,13 +62,17 @@
 .charge-btn {
   display: block;
   background-color: rgb(83, 132, 229);
-  border: 1px solid rgba(255, 0, 0, 0.5);
+  border: none;
   border-radius: 5px;
   color: white;
   font-size: 30px;
   height: 60px;
   padding: 10px 30px;
-  float: right;
+  transition: 0.5s;
+}
+
+.charge-btn:hover{
+  background-color: rgb(54, 88, 158);
 }
 
 .charge-btn>svg {
@@ -81,4 +89,11 @@
 .hr-line {
   border: 1px solid rgba(166, 166, 166, 0.5);
   margin: 0;
+}
+
+.cancel-charge-btns{
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
